--- a/frontend/login.html
+++ b/frontend/login.html
@@ -14,10 +14,7 @@
   </head>
   <body class="bg-gray-50">
     <!-- Toast Container -->
-    <div
-      id="toast-container"
-      class="fixed top-4 right-4 z-50 space-y-2"
-    ></div>
+    <div id="toast-container" class="fixed top-4 right-4 z-50 space-y-2"></div>
 
     <!-- Loading Overlay -->
     <div
@@ -25,208 +22,82 @@
       class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center"
     >
       <div class="bg-white p-6 rounded-lg shadow-xl">
-        <div
-          class="animate-spin rounded-full h-12 w-12 border-b-2 border-cyan-600 mx-auto"
-        ></div>
+        <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-cyan-600 mx-auto"></div>
         <p class="mt-4 text-gray-700">Logging in...</p>
       </div>
     </div>
 
     <div class="min-h-screen flex">
-      <!-- Left Side - Branding -->
-      <div
-        class="hidden lg:flex lg:w-1/2 bg-cyan-600 text-white flex-col justify-center p-12"
-      >
+      <!-- Left Side -->
+      <div class="hidden lg:flex lg:w-1/2 bg-cyan-600 text-white flex-col justify-center p-12">
         <div class="max-w-md">
           <h1 class="text-5xl font-bold mb-6">Welcome to AttendEase</h1>
           <p class="text-xl mb-8 text-cyan-100">
             Smart attendance management system for PESU University
           </p>
-          <div class="space-y-4">
-            <div class="flex items-start gap-3">
-              <svg
-                class="w-6 h-6 text-cyan-300 mt-1"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5 13l4 4L19 7"
-                />
-              </svg>
-              <div>
-                <h3 class="font-semibold text-lg">Real-time Tracking</h3>
-                <p class="text-cyan-100">
-                  Monitor attendance instantly with live updates
-                </p>
-              </div>
-            </div>
-            <div class="flex items-start gap-3">
-              <svg
-                class="w-6 h-6 text-cyan-300 mt-1"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5 13l4 4L19 7"
-                />
-              </svg>
-              <div>
-                <h3 class="font-semibold text-lg">Session-wise Records</h3>
-                <p class="text-cyan-100">
-                  Detailed breakdown for every class session
-                </p>
-              </div>
-            </div>
-            <div class="flex items-start gap-3">
-              <svg
-                class="w-6 h-6 text-cyan-300 mt-1"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5 13l4 4L19 7"
-                />
-              </svg>
-              <div>
-                <h3 class="font-semibold text-lg">Secure & Reliable</h3>
-                <p class="text-cyan-100">
-                  Role-based access with JWT authentication
-                </p>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 
-      <!-- Right Side - Login Form -->
-      <div
-        class="w-full lg:w-1/2 flex items-center justify-center p-8 bg-white"
-      >
+      <!-- Right Side -->
+      <div class="w-full lg:w-1/2 flex items-center justify-center p-8 bg-white">
         <div class="w-full max-w-md">
-          <!-- Logo for Mobile -->
           <div class="text-center lg:hidden mb-8">
             <h1 class="text-3xl font-bold text-cyan-600">AttendEase</h1>
           </div>
 
           <div class="mb-8">
-            <h2 class="text-3xl font-bold text-gray-900 mb-2">
-              Sign in to your account
-            </h2>
-            <p class="text-gray-600">
-              Enter your credentials to access your dashboard
-            </p>
+            <h2 class="text-3xl font-bold text-gray-900 mb-2">Sign in to your account</h2>
+            <p class="text-gray-600">Enter your credentials to access your dashboard</p>
           </div>
 
           <form id="login-form" class="space-y-6">
-            <!-- Email Field -->
             <div>
-              <label
-                for="email"
-                class="block text-sm font-medium text-gray-700 mb-2"
-              >
+              <label for="email" class="block text-sm font-medium text-gray-700 mb-2">
                 Email Address
               </label>
               <input
                 type="email"
                 id="email"
-                name="email"
                 required
                 placeholder="yourname@pesu.pes.edu"
-                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-transparent transition"
+                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cyan-500"
               />
               <p id="email-error" class="hidden text-red-500 text-sm mt-1"></p>
             </div>
 
-            <!-- Password Field -->
             <div>
-              <label
-                for="password"
-                class="block text-sm font-medium text-gray-700 mb-2"
-              >
+              <label for="password" class="block text-sm font-medium text-gray-700 mb-2">
                 Password
               </label>
               <div class="relative">
                 <input
                   type="password"
                   id="password"
-                  name="password"
                   required
                   placeholder="Enter your password"
-                  class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:border-transparent transition"
+                  class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-cyan-500"
                 />
-                <button
-                  type="button"
-                  id="toggle-password"
-                  class="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500 hover:text-gray-700"
-                >
-                  <svg
-                    id="eye-icon"
-                    class="w-5 h-5"
-                    fill="none"
-                    stroke="currentColor"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
-                    />
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
-                    />
-                  </svg>
-                </button>
               </div>
-              <p
-                id="password-error"
-                class="hidden text-red-500 text-sm mt-1"
-              ></p>
+              <p id="password-error" class="hidden text-red-500 text-sm mt-1"></p>
             </div>
 
-            
-
-            <!-- Submit Button -->
             <button
               type="submit"
-              class="w-full bg-cyan-600 text-white py-3 rounded-lg font-semibold hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-cyan-500 focus:ring-offset-2 transition"
+              class="w-full bg-cyan-600 text-white py-3 rounded-lg font-semibold hover:bg-cyan-700 focus:ring-2 focus:ring-cyan-500"
             >
               Sign In
             </button>
           </form>
 
-          <!-- Sign Up Link -->
           <p class="mt-6 text-center text-sm text-gray-600">
             Don't have an account?
-            <a
-              href="./signup.html"
-              class="text-cyan-600 hover:text-cyan-700 font-medium"
-            >
+            <a href="./signup.html" class="text-cyan-600 hover:text-cyan-700 font-medium">
               Sign up now
             </a>
           </p>
 
-          <!-- Back to Home -->
           <div class="mt-4 text-center">
-            <a
-              href="./index.html"
-              class="text-sm text-gray-500 hover:text-gray-700"
-            >
+            <a href="./index.html" class="text-sm text-gray-500 hover:text-gray-700">
               ← Back to Home
             </a>
           </div>
@@ -234,107 +105,78 @@
       </div>
     </div>
 
-    <script src="/js/constants.js"></script>
-    <script src="/js/utils.js"></script>
+    <!-- FIXED SCRIPT PATHS -->
+    <script src="./js/constants.js"></script>
+    <script src="./js/utils.js"></script>
+
     <script>
-      // Toggle Password Visibility
-      document
-        .getElementById('toggle-password')
-        .addEventListener('click', function () {
-          const passwordInput = document.getElementById('password');
-          const eyeIcon = document.getElementById('eye-icon');
+      document.getElementById('login-form').addEventListener('submit', async function (e) {
+        e.preventDefault();
 
-          if (passwordInput.type === 'password') {
-            passwordInput.type = 'text';
-            eyeIcon.innerHTML = `
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21" />
-          `;
-          } else {
-            passwordInput.type = 'password';
-            eyeIcon.innerHTML = `
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
-          `;
-          }
-        });
+        document.getElementById('email-error').classList.add('hidden');
+        document.getElementById('password-error').classList.add('hidden');
 
-      // Handle Form Submission
-      document
-        .getElementById('login-form')
-        .addEventListener('submit', async function (e) {
-          e.preventDefault();
+        const email = document.getElementById('email').value.trim();
+        const password = document.getElementById('password').value;
 
-          // Clear previous errors
-          document.getElementById('email-error').classList.add('hidden');
-          document.getElementById('password-error').classList.add('hidden');
+        let hasError = false;
 
-          const email = document.getElementById('email').value.trim();
-          const password = document.getElementById('password').value;
+        if (!validateEmail(email)) {
+          document.getElementById('email-error').textContent = 'Please enter a valid PESU email address';
+          document.getElementById('email-error').classList.remove('hidden');
+          hasError = true;
+        }
 
-          // Validation
-          let hasError = false;
+        if (!password) {
+          document.getElementById('password-error').textContent = 'Password is required';
+          document.getElementById('password-error').classList.remove('hidden');
+          hasError = true;
+        }
 
-          if (!validateEmail(email)) {
-            document.getElementById('email-error').textContent =
-              'Please enter a valid PESU email address';
-            document.getElementById('email-error').classList.remove('hidden');
-            hasError = true;
-          }
+        if (hasError) return;
 
-          if (password.length < 1) {
-            document.getElementById('password-error').textContent =
-              'Password is required';
-            document.getElementById('password-error').classList.remove('hidden');
-            hasError = true;
-          }
+        showLoading();
 
-          if (hasError) return;
+        try {
+          const data = await apiRequest(`${API_CONFIG.BASE_URL}/auth/login`, {
+            method: 'POST',
+            body: JSON.stringify({ email, password }),
+          });
 
-          // Show loading
-          showLoading();
+          hideLoading();
 
-          try {
-            const data = await apiRequest(`${API_CONFIG.BASE_URL}/auth/login`, {
-              method: 'POST',
-              body: JSON.stringify({ email, password }),
-            });
+          sessionStorage.setItem('user', JSON.stringify(data.data.user));
 
-            hideLoading();
+          showSuccessToast('Login successful! Redirecting...');
 
-            // Store user data (not tokens, they're in httpOnly cookies)
-            sessionStorage.setItem('user', JSON.stringify(data.data.user));
-
-            showSuccessToast('Login successful! Redirecting...');
-
-            // Redirect based on role
-            setTimeout(() => {
-              switch (data.data.user.role) {
-                case 'student':
-                  window.location.href = APP_ROUTES.STUDENT_DASHBOARD;
-                  break;
-                case 'teacher':
-                  window.location.href = APP_ROUTES.TEACHER_DASHBOARD;
-                  break;
-                case 'admin':
-                  window.location.href = APP_ROUTES.ADMIN_DASHBOARD;
-                  break;
-                default:
-                  window.location.href = '/index.html';
-              }
-            }, 1000);
-          } catch (error) {
-            hideLoading();
-            
-            // Handle specific error cases
-            if (error.statusCode === 401) {
-              showErrorToast('Invalid email or password');
-            } else if (error.statusCode === 403) {
-              showErrorToast('Account is deactivated. Please contact admin.');
-            } else {
-              showErrorToast(getUserFriendlyError(error.message));
+          setTimeout(() => {
+            switch (data.data.user.role) {
+              case 'student':
+                window.location.href = APP_ROUTES.STUDENT_DASHBOARD;
+                break;
+              case 'teacher':
+                window.location.href = APP_ROUTES.TEACHER_DASHBOARD;
+                break;
+              case 'admin':
+                window.location.href = APP_ROUTES.ADMIN_DASHBOARD;
+                break;
+              default:
+                window.location.href = APP_ROUTES.LANDING;
             }
+          }, 1000);
+
+        } catch (error) {
+          hideLoading();
+
+          if (error.statusCode === 401) {
+            showErrorToast('Invalid email or password');
+          } else if (error.statusCode === 403) {
+            showErrorToast('Account is deactivated. Please contact admin.');
+          } else {
+            showErrorToast(error.message || 'Something went wrong');
           }
-        });
+        }
+      });
     </script>
   </body>
 </html>
