--- a/frontend/pages/teacher/teacher-mark-attendance.html
+++ b/frontend/pages/teacher/teacher-mark-attendance.html
@@ -61,11 +61,12 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center h-16">
           <div class="flex items-center gap-4">
-            
+            <a
               href="/pages/teacher/teacher-dashboard.html"
               class="text-gray-600 hover:text-cyan-600 transition"
-              >← Back</a
             >
+            ← Back
+            </a>
             <h1 class="text-xl font-bold text-cyan-600">AttendEase</h1>
             <span class="text-sm text-gray-500">Mark Attendance</span>
           </div>
