--- a/frontend/pages/teacher/teacher-edit-attendance.html
+++ b/frontend/pages/teacher/teacher-edit-attendance.html
@@ -35,8 +35,8 @@
       class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4"
     >
       <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4">
-        <h3 class="text-xl font-bold mb-4">Confirm Changes</h3>
-        <p class="text-gray-700 mb-6" id="confirm-message"></p>
+        <h3 id="confirm-title" class="text-xl font-bold mb-4">Confirm Changes</h3>
+        <p id="confirm-message" class="text-gray-700 mb-6" id="confirm-message"></p>
         <div class="flex gap-3 justify-end">
           <button
             id="confirm-cancel"
@@ -447,6 +447,7 @@
       }
 
       function handleSubmit(e) {
+        console.log("HANDLE SUBMIT FIRED");
         e.preventDefault();
 
         if (recordData.isFinalized) {
